@@ -4,6 +4,6 @@ options:
     default: info
     description: >
       The level of detail to provide slurmdbd daemon's logs. The default value
-      is info. If the slurmdbd daemon is initiated with -v or --verbose
+      is `info`. If the slurmdbd daemon is initiated with `-v` or `--verbose`
       options, that debug level will be preserve or restored upon
       reconfiguration.
