@@ -7,6 +7,7 @@ This file keeps track of all notable changes to the Slurm Charms.
 Unreleased
 ----------
 
+- improve description of configurations and actions.
 - fix slurmrestd version in Juju status breaking the line.
 
 0.6.3 - 2021-06-02
